data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1025.wast
;; 6. **Test Description:**    - Design a test case where a `br` instruction within a series of nested `loop` constructs attempts to incorrectly branch back with mismatched operand types, such as an expected integer but providing a float.    - **Constraint Check:** Ensures backward branches to loops maintain the correct operand stack types as expected by the loop's input type.    - **Differential Behavior:** WebAssembly should halt and throw a type error if types do not match, but Wizard Engine might fail silently through incorrect handling of label references.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (loop (result i32)
          (br 0 (f32.const 1.0))
        )
      )
    )
  )
  "type mismatch"
)